--- a/src/css/layout.less
+++ b/src/css/layout.less
@@ -35,7 +35,7 @@ body {
   font-size: 13px;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: @primary-color;
   text-align: left;
   background-color: #fff;
 }
